# RusTeX

./: README.md  build.sbt
.github/workflows/: deploy.yml  release.yml  rust.yml
kpathsea/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
kpathsea/src/: lib.rs
kpathsea/tests/: find_file.rs
kpathsea_sys/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  build.rs  find_file.rs
kpathsea_sys/src/: bindings.rs  lib.rs
old.github/workflows/: rust.yml
rust/: Cargo.toml
rust/src/: catcodes.rs  commands.rs  interpreter.rs  javabridge.rs  lib.rs  main.rs  mouth.rs  ontology.rs  references.rs  state.rs  utils.rs
rust/src/commands/: etex.rs  pdftex.rs  primitives.rs
rust/src/interpreter/: dimensions.rs  files.rs  mouth.rs  state.rs
rustex/: Cargo.toml  build.rs
rustex/src/: catcodes.rs  commands.rs  fonts.rs  interpreter.rs  kpathsea.rs  lib.rs  main.rs  ontology.rs  references.rs  stomach.rs  utils.rs
rustex/src/commands/: conditionals.rs  etex.rs  latex_bindings.rs  pdftex.rs  pgfsvg.rs  primitives.rs  registers.rs  rustex_specials.rs
rustex/src/fonts/: convert.rs  fontchars.rs
rustex/src/interpreter/: dimensions.rs  files.rs  methods.rs  mouth.rs  params.rs  state.rs
rustex/src/interpreter/state/: store.rs
rustex/src/resources/: UnicodeData.txt  html.css  pgfsys-rust.def  pgfsys-scala.def
rustex/src/stomach/: boxes.rs  colon.rs  groups.rs  html.rs  math.rs  paragraph.rs  simple.rs  whatsits.rs
rustexbridge/: Cargo.toml
rustexbridge/src/: javabridge.rs  javaparams.rs  lib.rs  util.rs
src/main/scala/com/jazzpirate/rustex/bridge/: test.scala
src/main/scala/info/kwarc/rustex/: bridge.scala
test/: test.tex  test.xhtml
