[package]
name = "rustex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","lib"]
path = "src/lib.rs"

[[bin]]
name = "rustex"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# robusta_jni = "0.2"
lazy_static = "1.4.0"
itertools = "0.10.1"
