[package]
name = "rustex"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[[bin]]
name = "rustex"
path = "src/main.rs"

[profile.release]
opt-level = 2
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[build-dependencies]
#bindgen = "0.59"
#pkg-config = "0.3"

[dependencies]
array-init = "2.1.0"
lazy_static = "1.4.0"
itertools = "0.12"
pathdiff = "0.2.1"
ansi_term = "0.12.1"
backtrace = "0.3.69"
chrono = "0.4.35"
regex = "1.10.3"
md5 = "0.7.0"
image = "0.25.0"
base64 =  "0.22.0"
clap = { version = "4.5.3", features = ["derive"] }
pdfium-render = "0.8.20" #, features = ["static"] }
ahash = "0.8.11"
# serde = { version = "1.0.152", features = ["derive"] }
#lru = "0.9.0"
#qp-trie = "0.8.0"
#magick_rust = { path = "../magick-rust" }

#fixed = "1.11.0"
#libc = "0.2.0"
#kpathsea = "0.2.3"
#kpathsea = { path = "../kpathsea" }


# https://crates.io/crates/ahash
