[package]
name = "rustex"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[[bin]]
name = "rustex"
path = "src/main.rs"

[profile.release]
opt-level = 2
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[build-dependencies]
#bindgen = "0.59"
#pkg-config = "0.3"

[dependencies]
array-init = "2.1.0"
lazy_static = "1.4.0"
itertools = "0.13"
pathdiff = "0.2"
ansi_term = "0.12"
backtrace = "0.3"
chrono = "0.4"
regex = "1.10"
md5 = "0.7"
image = "0.25"
base64 =  "0.22"
clap = { version = "4.5", features = ["derive"] }
pdfium-render = "0.8" #, features = ["static"] }
ahash = "0.8"
# serde = { version = "1.0.152", features = ["derive"] }
#lru = "0.9.0"
#qp-trie = "0.8.0"
#magick_rust = { path = "../magick-rust" }

#fixed = "1.11.0"
#libc = "0.2.0"
#kpathsea = "0.2.3"
#kpathsea = { path = "../kpathsea" }


# https://crates.io/crates/ahash
