[package]
name = "rustex_java"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","lib"]
path = "src/lib.rs"

[profile.release]
opt-level = 2
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustex = { path = "../rustex" }
jni = "0.19.0"
